# onclaw

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  pyproject.toml  slack-app-manifest.yaml
helm/onclaw/: Chart.yaml  values.yaml
helm/onclaw/templates/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  pvc.yaml  secret.yaml  serviceaccount.yaml
src/onclaw/: __main__.py  ai_summarizer.py  app.py  config.py  investigation.py  k8s_investigator.py  memory.py  notifier.py  slack_listener.py  telegram_listener.py
tests/: conftest.py  test_ai_summarizer.py  test_investigation.py  test_k8s_investigator.py  test_memory.py  test_slack.py  test_telegram.py
